# MLOPs-services

./: .gitignore  README.md  pyproject.toml
.github/workflows/: lint_testers.yml
ml_app/: basic_net.py  main.py
tests/test_data/: test_leaks.py
tests/test_unit/: test_data_preparation.py
