[tool.poetry]
name = "mlops-services"
version = "0.1.0"
description = ""
authors = ["lucamartinatti"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.9,<3.13"
pandas = "^2.1.2"
scikit-learn = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
