[tool.poetry]
name = "mlops-services"
version = "0.1.0"
description = ""
authors = ["lucamartinatti"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.9,<3.13"
pandas = "^2.1.2"
scikit-learn = "^1.3.2"
torch = "^2.1.0"
mlflow = "^2.8.0"
torchmetrics = "^1.2.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
